# AidPulse

./: .gitignore  README.md  TODO.md  creating_sample_app.md  git_changes.txt  index.html  package.json  pyproject.toml  pythoncode_for_sample.py  sample_app_python_version.md  start.sh
.devcontainer/: Dockerfile  devcontainer.json
01_datasets/: 01_calfire_incidents.csv  01_calfire_incidents.parquet
backend/: .env  package-lock.json
backend/config/: config.js
backend/src/core/: config.py
backend/src/models/: models.py
backend/tests/: conftest.py  test_config.py  test_models.py  test_path.py
frontend/: .env  package-lock.json  package.json  promts.js  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.tsx  about.txt  global.d.ts  index.tsx  introduction_questions.json  questions.json  staticQuestion.js  utils.js  victimdata.json
frontend/src/Components/Chat/: Chat.js  Chat.tsx  ChatInput.tsx  MessageList.tsx  ResponderMessageList.tsx
frontend/src/Components/Home/: Home.js  Home.tsx
frontend/src/Components/InteractiveGraphic/: InteractiveGraphic.js
frontend/src/app/: AppContext.tsx  globals.css  layout.tsx  page.tsx  utils.js
frontend/src/app/app-components/: Header.tsx
frontend/src/app/components/: Header.tsx
frontend/src/chartjs/: charts.js  synthetic_data.json
frontend/src/context/: AppContext.tsx
frontend/src/data/: constants.js  messages.json  prompts.js  victimData.json  victimFields.json
frontend/src/types/: types.ts
frontend/tests/: test_components.py
src/: raw_data.ipynb
(+15 files in other folders)
